Time: 2655 ms (5.01%), Space: 54 MB (5.46%) - LeetHub